# io4edge-client-python

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  browser.py  main.py  prototest.py  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: pypi.yaml
examples/analogintypea/: README.md  main.py
examples/analogintypeb/: README.md  describe.py  iou09_calibrate.py  poll.py  stream.py
examples/binaryiotypea/: README.md  main.py
examples/binaryiotypeb/: README.md  main.py
examples/binaryiotypec/: README.md  main.py
examples/binaryiotyped/: config.py  get_channels.py  get_configuration.py  set_output.py  so1_blinky.py  sq1_blinky.py
examples/bitbussniffer/: dumpstream.py
examples/canl2/: README.md  config.py  dumpstream.py  send.py
examples/core/: get_parameter.py  identify_firmware.py  identify_hardware.py  load_firmware.py  reset_reason.py  restart.py  set_parameter.py
examples/digiwave/: BITBUS-Demo-Signal-short.csv  dumpwave.py  sendwave.py
examples/docker/: Dockerfile
examples/mvbsniffer/: README.md  dumpstream.py
examples/pixelDisplay/: README.md
examples/programmablePsu/: calib.py  main.py
io4edge_client/: __init__.py  _version.py  version.py
io4edge_client/analogintypea/: __init__.py  client.py
io4edge_client/analogintypeb/: __init__.py  client.py
io4edge_client/base/: channel.py  client.py  connections.py  socket_transport.py
io4edge_client/binaryiotypea/: client.py
io4edge_client/binaryiotypeb/: client.py
tests/: test_base.py
(+31 files in other folders)
